src/test/resources/parse/reject/printNoSemicolon.ul
int id1 ()
{
    print "string"
}
